--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>java</name>
+			<type>2</type>
+			<location>D:/home/workspace/GuitarTrainer/src/main/java</location>
+		</link>
+	</linkedResources>
 </projectDescription>
